outputs_20260402-095956-87e275f3/codegen/production/build_logs/compiler_stderr.log
In file included from /tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:12:
/tmp/tdd_build_cw2auxoi/include/IfxEgtm_Pwm.h:154:5: error: unknown type name ‘IfxEgtm_Pwm_InterruptConfig’; did you mean ‘IfxEgtm_Pwm_OutputConfig’?
  154 |     IfxEgtm_Pwm_InterruptConfig *interrupt;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      |     IfxEgtm_Pwm_OutputConfig
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c: In function ‘interruptEgtmAtom’:
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:41:40: error: ‘MODULE_P03’ undeclared (first use in this function); did you mean ‘MODULE_P33’?
   41 | #define LED                          (&MODULE_P03), (9U)
      |                                        ^~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:66:23: note: in expansion of macro ‘LED’
   66 |     IfxPort_togglePin(LED);
      |                       ^~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:41:40: note: each undeclared identifier is reported only once for each function it appears in
   41 | #define LED                          (&MODULE_P03), (9U)
      |                                        ^~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:66:23: note: in expansion of macro ‘LED’
   66 |     IfxPort_togglePin(LED);
      |                       ^~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c: In function ‘resultISR’:
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:41:40: error: ‘MODULE_P03’ undeclared (first use in this function); did you mean ‘MODULE_P33’?
   41 | #define LED                          (&MODULE_P03), (9U)
      |                                        ^~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:83:23: note: in expansion of macro ‘LED’
   83 |     IfxPort_togglePin(LED);
      |                       ^~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c: In function ‘initEgtmAtom3phInv’:
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:23:40: error: ‘IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT’ undeclared (first use in this function)
   23 | #define PHASE_U_HS                   (&IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT)
      |                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:125:64: note: in expansion of macro ‘PHASE_U_HS’
  125 |     invOut[0].pin                     = (IfxEgtm_Pwm_ToutMap *)PHASE_U_HS;
      |                                                                ^~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:24:40: error: ‘IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT’ undeclared (first use in this function)
   24 | #define PHASE_U_LS                   (&IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT)
      |                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:126:64: note: in expansion of macro ‘PHASE_U_LS’
  126 |     invOut[0].complementaryPin        = (IfxEgtm_Pwm_ToutMap *)PHASE_U_LS;
      |                                                                ^~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:25:40: error: ‘IfxEgtm_ATOM0_1_TOUT66_P20_10_OUT’ undeclared (first use in this function)
   25 | #define PHASE_V_HS                   (&IfxEgtm_ATOM0_1_TOUT66_P20_10_OUT)
      |                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:132:64: note: in expansion of macro ‘PHASE_V_HS’
  132 |     invOut[1].pin                     = (IfxEgtm_Pwm_ToutMap *)PHASE_V_HS;
      |                                                                ^~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:26:40: error: ‘IfxEgtm_ATOM0_1N_TOUT67_P20_11_OUT’ undeclared (first use in this function)
   26 | #define PHASE_V_LS                   (&IfxEgtm_ATOM0_1N_TOUT67_P20_11_OUT)
      |                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:133:64: note: in expansion of macro ‘PHASE_V_LS’
  133 |     invOut[1].complementaryPin        = (IfxEgtm_Pwm_ToutMap *)PHASE_V_LS;
      |                                                                ^~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:27:40: error: ‘IfxEgtm_ATOM0_2_TOUT68_P20_12_OUT’ undeclared (first use in this function)
   27 | #define PHASE_W_HS                   (&IfxEgtm_ATOM0_2_TOUT68_P20_12_OUT)
      |                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:139:64: note: in expansion of macro ‘PHASE_W_HS’
  139 |     invOut[2].pin                     = (IfxEgtm_Pwm_ToutMap *)PHASE_W_HS;
      |                                                                ^~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:28:40: error: ‘IfxEgtm_ATOM0_2N_TOUT69_P20_13_OUT’ undeclared (first use in this function)
   28 | #define PHASE_W_LS                   (&IfxEgtm_ATOM0_2N_TOUT69_P20_13_OUT)
      |                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:140:64: note: in expansion of macro ‘PHASE_W_LS’
  140 |     invOut[2].complementaryPin        = (IfxEgtm_Pwm_ToutMap *)PHASE_W_LS;
      |                                                                ^~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:166:28: error: assignment to ‘int *’ from incompatible pointer type ‘IfxEgtm_Pwm_InterruptConfig *’ [-Wincompatible-pointer-types]
  166 |     invChCfg[0].interrupt  = &irqCfg;           /* base channel gets interrupt */
      |                            ^
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:32:40: error: ‘IfxEgtm_ATOM0_3_TOUT22_P33_0_OUT’ undeclared (first use in this function)
   32 | #define ADC_TRIG_PIN                 (&IfxEgtm_ATOM0_3_TOUT22_P33_0_OUT)
      |                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:197:64: note: in expansion of macro ‘ADC_TRIG_PIN’
  197 |     trigOut[0].pin                    = (IfxEgtm_Pwm_ToutMap *)ADC_TRIG_PIN;
      |                                                                ^~~~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:41:40: error: ‘MODULE_P03’ undeclared (first use in this function); did you mean ‘MODULE_P33’?
   41 | #define LED                          (&MODULE_P03), (9U)
      |                                        ^~~~~~~~~~
/tmp/tdd_build_cw2auxoi/src/egtm_atom_3_phase_inverter_pwm.c:266:30: note: in expansion of macro ‘LED’
  266 |     IfxPort_setPinModeOutput(LED, IfxPort_OutputMode_pushPull, IfxPort_OutputIdx_general);
      |                              ^~~

In file included from /tmp/tdd_build_cw2auxoi/mocks/mock_egtm_atom_3_phase_inverter_pwm.c:5:
/tmp/tdd_build_cw2auxoi/include/IfxEgtm_Pwm.h:154:5: error: unknown type name ‘IfxEgtm_Pwm_InterruptConfig’; did you mean ‘IfxEgtm_Pwm_OutputConfig’?
  154 |     IfxEgtm_Pwm_InterruptConfig *interrupt;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      |     IfxEgtm_Pwm_OutputConfig

/tmp/tdd_build_cw2auxoi/test/test_egtm_atom_3_phase_inverter_pwm.c:23:16: error: conflicting types for ‘mock_IfxEgtm_Pwm_init_callCount’; have ‘uint32’ {aka ‘long unsigned int’}
   23 | extern uint32  mock_IfxEgtm_Pwm_init_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /tmp/tdd_build_cw2auxoi/test/test_egtm_atom_3_phase_inverter_pwm.c:2:
/tmp/tdd_build_cw2auxoi/include/mock_egtm_atom_3_phase_inverter_pwm.h:83:12: note: previous declaration of ‘mock_IfxEgtm_Pwm_init_callCount’ with type ‘int’
   83 | extern int mock_IfxEgtm_Pwm_init_callCount;
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_cw2auxoi/test/test_egtm_atom_3_phase_inverter_pwm.c:24:16: error: conflicting types for ‘mock_IfxEgtm_Trigger_trigToAdc_callCount’; have ‘uint32’ {aka ‘long unsigned int’}
   24 | extern uint32  mock_IfxEgtm_Trigger_trigToAdc_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_cw2auxoi/include/mock_egtm_atom_3_phase_inverter_pwm.h:91:12: note: previous declaration of ‘mock_IfxEgtm_Trigger_trigToAdc_callCount’ with type ‘int’
   91 | extern int mock_IfxEgtm_Trigger_trigToAdc_callCount;
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_cw2auxoi/test/test_egtm_atom_3_phase_inverter_pwm.c:27:16: error: conflicting types for ‘mock_togglePin_callCount’; have ‘uint32’ {aka ‘long unsigned int’}
   27 | extern uint32  mock_togglePin_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_cw2auxoi/include/mock_egtm_atom_3_phase_inverter_pwm.h:109:12: note: previous declaration of ‘mock_togglePin_callCount’ with type ‘int’
  109 | extern int mock_togglePin_callCount; /* same storage as mock_IfxPort_togglePin_callCount */
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
